apps/media/youtarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: youtarr-httproute
  namespace: media
  annotations:
    glance.pmcd.io/monitor: "true"
    glance.pmcd.io/monitor-title: "Youtarr"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: default
  hostnames:
    - youtarr.x.pmcd.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: youtarr
          kind: Service
          namespace: media
          port: 80
